--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "start": "node src/index.js",
-    "work":"nodemon src/index.js"
+    "work": "nodemon src/index.js"
   },
   "author": "Vedant",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.10.0",
     "botbuilder": "^4.17.0-blobs1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
